fix(map-visualizer): Fixed map scrolling issues when on mobile devices
Fixed map scrolling issues on mobile devices and when not on full screen mode

--- a/src/pages/visualization/modules/map/components/map-loader/map-loader.component.scss
+++ b/src/pages/visualization/modules/map/components/map-loader/map-loader.component.scss
@@ -28,7 +28,6 @@ app-map-loader {
   .container {
     width: 100%;
     height: 100%;
-    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
